--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
